start fixing dependency issues and imports